@@ -136,6 +136,7 @@ Bugs fixed
 * #2485: autosummary crashes with multiple source_suffix values
 * #1734: Could not translate the caption of toctree directive
 * Could not translate the content of meta directive (ref: #1734)
+* #2550: external links are opened in help viewer
 
 Documentation
 -------------
